# pyramid_api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  alembic.md  celeryconfig.py  development.ini  docker-compose.yaml  docker.md  marshmallow.md  mashmallow.md  pyproject.toml  pyramid_api.sqlite
alembic/: env.py
alembic/versions/: 499bbd8f6262_added_currency_collumn.py  72a39b47bcf6_create_country_table.py  926b544b2648_add_a_column.py
docs/: alembic.md  docker.md  marshmallow.md  poetry.md
pyramid_api/: __init__.py  controller.py  initialize_db.py  models.py  schemas.py  tasks.py  views.py
pyramid_api/api/resources/: country.py
pyramid_api/api/schemas/: country.py
pyramid_api/models/: __init__.py  country.py
pyramid_api/repository/: interface.py
tests/: test_pyramid_api.py
